# jornada-primeiro-projeto

./: README.md  main.py
0_basics/0_primitive_types/: 3_desafio.py
0_basics/1_if_else/: 2_isistance.py  3_desafio.py
0_basics/2_flow_structures/: 4_desafio.py
0_basics/3_complex_types_with_typehint/: 1_desafio_anterior_com_tipagem.py  2_tipos_de_dados_complexos.py  4_lendo_csv.py  5_desafio_com_funcoes.py
1_functions_and_modules/0_basics/: exemplo_funcao.py  vendas.csv
1_functions_and_modules/2_using_decorators/: 0_exemplos_log_types.py  2_uso_decorator_log.py  README.md  pipeline.py  simple_decorator.py  utils_log.py
1_functions_and_modules/2_using_decorators/data/: coleta_dia1.json
2_classes/: 2_heranca.py  README.md
2_classes/0_oop_intro/: 0_exemplo_funcional.py  1_exemplo_classe.py  README.md  pyproject.toml
2_classes/0_oop_intro/4_heranca_e_polimorfismo/: README.md
2_classes/0_oop_intro/4_heranca_e_polimorfismo/data/json_files/: data.json
2_classes/0_oop_intro/4_heranca_e_polimorfismo/src/lib/classes/: AbstractDataSource.py  CsvSource.py
2_classes/4_heranca_e_polimorfismo/data/txt_files/: data.txt
aula_1/: 0_print_input.py  1_input_com_typecast.py  1_process_flow_try_excepts.py  2_primitive_types.py
aula_2/: 0_if_statement.py  1_for.py  2_while.py
aula_3/: 0_type_hint.py  3_exercicios.py
aula_6/: etl.py  main.py
aula_7/: etl.py  pyproject.toml
aula_7/data/: coleta_dia2.json
aula_8/: 1_exemplo_uso_logs.py  2_uso_decorator_log.py  etl.py  pyproject.toml  timer_decorator.py
aula_8/data/: coleta_dia3.json
aula_8/src/: pipeline.py
(+1 files in other folders)
