[project]
name = "aula-8"
version = "0.1.0"
description = ""
authors = [
    {name = "Juan Veronez",email = "juan.monteirov@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11, <4.0"
dependencies = [
    "pandera (>=0.22.1,<0.23.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "loguru (>=0.7.3,<0.8.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
